# mansartip

./: .gitignore  Cargo.toml  README.md  env.example  worldcup.sql
backend/: Cargo.toml
backend/src/: api_routes.rs  app.rs  country.rs  country_system.rs  game.rs  general.rs  main.rs  match_system.rs  public_routes.rs  tipping_system.rs  user.rs  user_system.rs
backend/src/api_routes/: auth_middleware.rs
backend/src/app/: app_dtos.rs  app_helpers.rs  app_state.rs  web.rs
backend/src/app/app_dtos/: api_response_dto.rs
backend/src/app/app_helpers/: app_error_helper.rs  app_request_helper.rs  authenticated_user.rs  database_datetime_helper.rs  not_authenticated_error.rs
backend/src/country/: country_dtos.rs  country_entities.rs  country_repo.rs
backend/src/country/country_controllers/: get_all_countries_controller.rs  get_country_by_id_controller.rs  new_country_controller.rs
backend/src/country/country_dtos/: countries_api_response_dto.rs  country_api_response_dto.rs  country_entity_api_dto.rs
backend/src/country/country_entities/: country.rs  country_entity.rs
backend/src/country/country_services/: country_actix_config_service.rs  country_repo_service.rs  country_service.rs
backend/src/country_system/: country_controllers.rs  country_dtos.rs  country_entities.rs  country_routes.rs  country_services.rs
backend/src/country_system/country_controllers/: get_all_countries_controller.rs  get_country_by_id_controller.rs  new_country_controller.rs
backend/src/game/: game_controllers.rs  game_routes.rs
backend/src/general/: general_controllers.rs  general_routes.rs
backend/src/match_system/: match_controllers.rs  match_dtos.rs  match_routes.rs  match_services.rs
backend/src/tipping_system/: tipping_controllers.rs  tipping_entities.rs  tipping_routes.rs  tipping_services.rs
backend/src/user/: user_controllers.rs  user_dtos.rs  user_routes.rs
backend/src/user_system/: user_controllers.rs  user_dtos.rs  user_entities.rs  user_helpers.rs  user_routes.rs  user_services.rs
src/: country.rs  (+1 more)
(+63 files in other folders)
