[package]
name = "mansartip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
futures-util = "0.3.25"
futures = "0.3"
serde = {version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono","time" ] }
dotenvy = "0.15.6"
actix-files = "0.6.2"
bcrypt = "0.13.0"
chrono = {version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.32", features = ["derive"] }
async-trait = "0.1.60"
rand = "0.8.5"
uuid = { version = "1.2.2", features = ["v4"] }
time = { version = "0.3.17", features = ["serde", "serde-human-readable", "parsing" ] }

[dependencies.cookie]
features = ["secure", "percent-encode"]
